Default to the generated serializer over XStream
The reflection-free generated serializer has been structurally parity-clean
over the full corpus since M5, so make it the default path. XStream stays
reachable as an escape hatch during the migration via APEX_SERIALIZER=xstream
(or -DapexSerializer=xstream); M7 removes it for good.

Native end-to-end A/B on the same binary shows java-serialize dropping 94-98%
and total format time 44-69%, with smaller secondary wins on spawn-ipc and
deserialize from the more compact payload. The GraalVM reflection Feature stays
in place for now to isolate this swap from the dependency removal in M7.